--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+body{
+    /*text-align:center;*/
+
+}
 #colorbox {
+    
+    /*display: inline-block;
+    vertical-align: top;*/
     width: 300px;
     height: 300px;
     background-color: black;
