--- a/Intervaltimer/style.css
+++ b/Intervaltimer/style.css
@@ -1,16 +1,90 @@
-body{
-    /*text-align:center;*/
-
-}
-#colorbox {
-    
-    /*display: inline-block;
-    vertical-align: top;*/
-    width: 300px;
-    height: 300px;
+/* Add CSS reset styles */
+html, body, h1, h2, h3, h4, h5, h6, p, button {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font-weight: normal;
+    box-sizing: border-box;
+  }
+  
+  /* Use CSS vendor prefixes */
+  body {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: -webkit-linear-gradient(to bottom, lightblue, white);
+    background: linear-gradient(to bottom, lightblue, white);
+    height: 100vh;
+  }
+  
+  .button-container {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  
+  button {
+    padding: 20px 40px;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color: lightblue;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin: 10px;
+  }
+  
+  input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    text-align: center;
+    width: 40px;
+  }
+  
+  #timeinput {
+    padding-bottom: 5px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  
+  .intervals {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  
+  input {
+    width: 3em;
+  }
+  
+  #timer {
+    font-size: 70px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  #colorbox {
+    width: 100%;
+    height: 70%;
     background-color: black;
+  }
+
+html {
+  font-size: 16px;
 }
 
-#timer {
-    font-size: 50px;
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
 }
