--- a/Intervaltimer/style.css
+++ b/Intervaltimer/style.css
@@ -77,6 +77,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, button {
     width: 100%;
     height: 70%;
     background-color: black;
+    font-size: 400;
   }
 
 html {
