--- a/Intervaltimer/style.css
+++ b/Intervaltimer/style.css
@@ -76,7 +76,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, button {
   #colorbox {
     width: 100%;
     height: 70%;
-    background-color: black;
+    background-color: "none";
     display: flex;
     align-items: center;
     justify-content: center;
